Fix alignment of gooter copyright text

--- a/style.css
+++ b/style.css
@@ -2319,7 +2319,7 @@ a {
 
 .copyright {
   font-size: 1.125em;
-  text-align: left;
+  text-align: center;
 }
 
 .footer-email {
